--- a/moodle/paytm/enrol.html
+++ b/moodle/paytm/enrol.html
@@ -4,7 +4,7 @@
     <p><?php print_string("paymentrequired") ?></p>
     <p><b><?php echo $instancename; ?></b></p>
     <p><b><?php echo get_string("cost").": {$instance->currency} {$localisedcost}"; ?></b></p>
-    <p><img alt="<?php print_string('paytmaccepted', 'enrol_paytm') ?>" src="<?php echo $CFG->wwwroot.'/enrol/paytm/paytm.png'?>" /></p>
+    <p><img alt="<?php print_string('paytmaccepted', 'enrol_paytm') ?>" src="<?php echo $CFG->wwwroot.'/enrol/paytm/paytm_logo.png'?>" /></br><img alt="<?php print_string('paytmaccepted', 'enrol_paytm') ?>" src="<?php echo $CFG->wwwroot.'/enrol/paytm/paytm_detail.png'?>" /></p>
     <p><?php print_string("paymentinstant") ?></p>
     <?php
 
@@ -15,6 +15,8 @@
         //echo "<pre>"; print_r($formArray); die;
         $orderid = $formArray['ORDER_ID'];
         $tnx_token = $formArray['TXN_TOKEN'];
+        $plugin_version = $formArray['plugin_version'];
+        $moodle_version = $formArray['moodle_version'];
         $amount = $formArray['TXN_AMOUNT'];
         $msg = $formArray['MESSAGE'];
         foreach( $formArray as $k=>$v )
@@ -75,6 +77,10 @@
                 },
                 "merchant": {
                     "redirect": true
+                },
+                "integration": {
+                    "platform": "Moodle",
+                    "version": "<?php echo $moodle_version?>|<?php echo $plugin_version?>"
                 },
                 "handler": {
                    
